Rename old "tutorial" to "hints".
This is to mostly everything inside crawl-ref/source.
I may have missed other places.

--- a/crawl-ref/source/makefile.obj
+++ b/crawl-ref/source/makefile.obj
@@ -56,6 +56,7 @@ goditem.o \
 godpassive.o \
 godprayer.o \
 godwrath.o \
+hints.o \
 hiscores.o \
 initfile.o \
 invent.o \
@@ -190,7 +191,6 @@ terrain.o \
 transform.o \
 traps.o \
 travel.o \
-tutorial.o \
 view.o \
 viewchar.o \
 viewgeom.o \
