Makefiles: fix GCC existence check on broken 'which' implementations
Some 'which' implementations print errors to stdout instead of
stderr, which can give false positives. Fix this by redirecting
all output of 'which' to /dev/null, and checking the return value
instead.

Thanks to JoachimSchipper on Mantis for this suggestion (Issue #926).

Signed-off-by: Steven Noonan <steven@uplinklabs.net>

--- a/crawl-ref/source/rltiles/Makefile
+++ b/crawl-ref/source/rltiles/Makefile
@@ -29,7 +29,7 @@ LMACH := $(shell gcc -dumpmachine)-
 ifeq ($(LMACH),-)
 LMACH :=
 endif
-ifeq ($(shell which $(LMACH)gcc 2> /dev/null),)
+ifeq ($(shell which $(LMACH)gcc > /dev/null 2> /dev/null && echo "Yes"),)
 LMACH :=
 endif
 CXX = $(LMACH)g++
