art-data.pl: fit in better with the GNU Make build process (cosmetic change)
Signed-off-by: Steven Noonan <steven@uplinklabs.net>

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -1063,7 +1063,7 @@ $(foreach t,$(CONTRIB_LIBS),$(if $(wildcard $t),,$(shell rm -f .contrib-libs)))
 #############################################################################
 # Build unrandart data
 $(GENERATED_FILES): art-data.txt util/art-data.pl art-func.h
-	util/art-data.pl
+	@util/art-data.pl
 
 #############################################################################
 # RLTiles
