makefile: fix depfile target for util/ sources
Signed-off-by: Steven Noonan <steven@uplinklabs.net>

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -1010,7 +1010,7 @@ wizard: all
 # test.
 
 $(UTIL)%.o: $(UTIL)%.cc .cflags
-	$(QUIET_CXX)$(CXX) $(YACC_CFLAGS) -Wp,-MD,$(UTIL)$*.d -c $< -o $(UTIL)$*.o
+	$(QUIET_CXX)$(CXX) $(YACC_CFLAGS) -Wp,-MD,$(UTIL)$*.d,-MT,$(UTIL)$*.o -c $< -o $(UTIL)$*.o
 
 ifdef PCH
 %.h.gch: %.h
