makefile: disable GNU Make implicit rules
These rules are not used by us, and leaving them enabled significantly
slows MinGW and Cygwin builds. To solve this, simply add the -rR parameters
to the MAKEFLAGS variable in the makefile and things get faster:

  (dry run, WITH implicit rulesets)
  $ make -n BUILD_ALL=YesPlease
  [snip]
  real    0m25.109s
  user    0m4.947s
  sys     0m15.307s

  (dry run, WITHOUT implicit rulesets)
  $ make -rRn BUILD_ALL=YesPlease
  [snip]
  real    0m11.294s
  user    0m1.795s
  sys     0m4.038s

Signed-off-by: Steven Noonan <steven@uplinklabs.net>

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -49,6 +49,11 @@ GAME = crawl
 
 ASSERTS = yes
 
+# Disable GNU Make implicit rules and variables. Leaving them enabled will slow
+# down MinGW and Cygwin builds by a very VERY noticeable degree. Besides, we have
+# _explicit_ rules defined for everything. So we don't need them.
+MAKEFLAGS += -rR
+
 #
 # Compiler Flags
 #
