Add monster list for tiles.
This is currently implemented as an additional tab.  Possibly
improvements might be to always display it on screen if there's room or
to simply pop to the tab when new monsters appear.

--- a/crawl-ref/source/makefile.obj
+++ b/crawl-ref/source/makefile.obj
@@ -213,6 +213,7 @@ tilefont.o \
 tilemcache.o \
 tilepick.o \
 tilereg.o \
+tilereg-act.o \
 tilereg-crt.o \
 tilereg-dgn.o \
 tilereg-doll.o \
@@ -221,6 +222,7 @@ tilereg-inv.o \
 tilereg-map.o \
 tilereg-mem.o \
 tilereg-menu.o \
+tilereg-mon.o \
 tilereg-msg.o \
 tilereg-spl.o \
 tilereg-stat.o \
