Split dngn tile page into feat/floor/wall.
Due to the set of coloured floors and walls, it was getting perilously
large.  The tiledef-dngn.h file now just indirectly calls the correct
feat/floor/wall functions depending on which tile index is used.

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -747,18 +747,14 @@ endif
 endif
 
 ifdef TILES
-TILEDEFS = dngn main player gui unrand
+TILEIMAGEFILES := floor wall feat main player gui
+TILEDEFS = $(TILEIMAGEFILES) dngn unrand
 TILEDEFPRES = $(TILEDEFS:%=$(RLTILES)/tiledef-%)
-TILEDEFTXTS = $(TILEDEFPRES:%=%.txt)
 TILEDEFOBJS = $(TILEDEFPRES:%=%.o)
 TILEDEFSRCS = $(TILEDEFPRES:%=%.cc)
 TILEDEFHDRS = $(TILEDEFPRES:%=%.h)
 
-TILEFILES = \
-	main.png \
-	player.png \
-    dngn.png \
-    gui.png
+TILEFILES = $(TILEIMAGEFILES:%=%.png)
 ORIGTILEFILES = $(TILEFILES:%=$(RLTILES)/%)
 DESTTILEFILES = $(TILEFILES:%=dat/tiles/%)
 
