--- a/crawl-ref/.gitignore
+++ b/crawl-ref/.gitignore
@@ -45,6 +45,9 @@ mapgen.log
 
 # Tile copied files
 /source/dat/tiles/dngn.png
+/source/dat/tiles/floor.png
+/source/dat/tiles/wall.png
+/source/dat/tiles/feat.png
 /source/dat/tiles/main.png
 /source/dat/tiles/player.png
 /source/dat/tiles/gui.png
