makefile: don't check .cflags on 'make test'
Signed-off-by: Steven Noonan <steven@uplinklabs.net>

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -835,6 +835,7 @@ test:
 
 
 ifeq (,$(findstring clean,$(MAKECMDGOALS)))
+ifeq (,$(findstring test,$(MAKECMDGOALS)))
 
 #
 # CFLAGS difference check
@@ -866,6 +867,7 @@ ifneq ($(DEPS),)
 -include $(DEPS)
 endif
 
+endif
 endif
 
 depend: $(OBJECTS:.o=.d)
