--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -171,6 +171,7 @@ ifneq (,$(findstring MINGW,$(uname_S)))
 	NO_NCURSES = YesPlease
 	NEED_LIBW32C = YesPlease
 	BUILD_PCRE = YesPlease
+	DEFINES_L += -DWINMM_PLAY_SOUNDS
 	ifdef TILES
 		EXTRA_LIBS += -lmingw32 -lgdi32 -lwinmm contrib/install/lib/libSDLmain.a -mwindows
 		BUILD_FREETYPE = YesPlease
