Purge get-opt{,-x86}.pl, -march=native does the same without incomplete zoology.

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -429,7 +429,7 @@ endif
 
 ifdef AUTO_OPT
 ifndef NO_AUTO_OPT
-CFOPTIMIZE += $(shell util/gcc-opt.pl $(GCC))
+CFOPTIMIZE += -march=native
 endif
 endif
 
