Fix inverted logic.
And hey, in the tests it worked ('cuz the user was the same...).

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -616,7 +616,7 @@ else
 endif
 
 ifneq ($(strip $(SAVEDIR)),)
-  ifeq ($(filter \~%,$(SAVEDIR)),)
+  ifneq ($(filter \~%,$(SAVEDIR)),)
     CFOTHERS_L += -DSAVE_DIR_PATH=\"$(SAVEDIR)\"
     savedir_fp :=
   else
