--- a/crawl-ref/.gitignore
+++ b/crawl-ref/.gitignore
@@ -25,6 +25,9 @@ dc-unrand.txt
 *.orig
 *.rej
 
+# From mac-crawl-build
+last-mac-build.version
+
 # Text editor generated junk (backup files and such)
 DEADJOE
 \#*
