Unbreak SAVEDIR=~/.crawl (cherry picked from commit 61b67ee8d631efa295e4b76dee6483c5015a10e8)
Signed-off-by: Darshan Shaligram <dshaligram@users.sourceforge.net>

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -616,7 +616,7 @@ else
 endif
 
 ifneq ($(strip $(SAVEDIR)),)
-  ifneq ($(filter \~%,$(SAVEDIR)),)
+  ifneq ($(filter ~%,$(SAVEDIR)),)
     CFOTHERS_L += -DSAVE_DIR_PATH=\"$(SAVEDIR)\"
     savedir_fp :=
   else
