--- a/crawl-ref/.gitignore
+++ b/crawl-ref/.gitignore
@@ -119,5 +119,8 @@ makefile.dep
 /source/debian/crawl
 /source/debian/files
 
+# Windows packaging
+/source/crawl-win
+
 # Windows thumbnail files
 Thumbs.db
