Windows installer changes:
* nuke the staging dir on "make clean"
* obey USE_MERGE_BASE (this applies to package-source as well)
* rename the console binary to crawl-console.exe
  It made sense on Unix since it's typically run from a terminal rather than
  a menu there, but on Windows, it just causes confusion.
* don't purge C:\Program Files\Crawl\ on uninstall, in case someone puts
  some precious data there.
* ship README.{txt,pdf}, LICENCE.txt, CREDITS.txt

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -816,10 +816,10 @@ GENERATED_FILES := art-data.h $(RLTILES)/dc-unrand.txt
 
 GAME_DEPENDS  := $(DESTTILEFILES) $(OBJECTS) $(EXTRA_OBJECTS) $(CONTRIB_LIBS)
 SRC_PKG_BASE  := stone_soup
-SRC_VERSION   := $(shell git describe --tags --long 2>/dev/null || cat util/release_ver)
+SRC_VERSION   := $(shell git describe --tags --long $(MERGE_BASE) 2>/dev/null || cat util/release_ver)
 
 # when making release builds, use just the bare tag
-SRC_VERSION_SHORT := $(shell git describe --tags 2>/dev/null || cat util/release_ver)
+SRC_VERSION_SHORT := $(shell git describe --tags $(MERGE_BASE) 2>/dev/null || cat util/release_ver)
 ifneq (,$(SRC_VERSION_SHORT))
   ifeq (,$(findstring -,$(SRC_VERSION_SHORT)))
     SRC_VERSION := $(SRC_VERSION_SHORT)
@@ -1005,6 +1005,7 @@ clean:
 	+$(MAKE) -C $(UTIL) clean
 	+$(MAKE) -C $(RLTILES) clean
 	$(RM) $(GAME) $(GAME).exe $(GENERATED_FILES) $(EXTRA_OBJECTS) libw32c.o libunix.o $(OBJECTS) $(OBJECTS:.o=.d) *.ixx build.h compflag.h .contrib-libs .cflags
+	$(RM) -r build-win
 
 clean-contrib:
 	+$(MAKE) -C contrib clean
@@ -1151,7 +1152,7 @@ removeold:
 
 # You need to have NSIS installed.
 package-windows:
-ifneq (x$(SRC_VERSION_SHORT),x$(shell cat crawl-win/version.txt 2>/dev/null))
+ifneq (x$(SRC_VERSION_SHORT),x$(shell cat build-win/version.txt 2>/dev/null))
 	+$(MAKE) build-windows
 endif
 	makensis -NOCD -DVERSION=$(SRC_VERSION_SHORT) util/crawl.nsi
@@ -1160,8 +1161,9 @@ build-windows:
 ifneq ($(GAME),crawl.exe)
 	@echo "This is only for Windows; please specify CROSSHOST.";false
 endif
-	rm -rf crawl-win
-	+$(MAKE) TILES=y DESTDIR=crawl-win SAVEDIR='~/crawl' install
-	mv crawl-win/crawl.exe crawl-win/crawl-tiles.exe
-	+$(MAKE) TILES=  DESTDIR=crawl-win SAVEDIR='~/crawl' install
-	echo $(SRC_VERSION_SHORT) >crawl-win/version.txt
+	+$(MAKE) clean
+	+$(MAKE) TILES=y DESTDIR=build-win SAVEDIR='~/crawl' install
+	mv build-win/crawl.exe build-win/crawl-tiles.exe
+	+$(MAKE) TILES=  DESTDIR=build-win SAVEDIR='~/crawl' install
+	mv build-win/crawl.exe build-win/crawl-console.exe
+	echo $(SRC_VERSION_SHORT) >build-win/version.txt
