--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -135,6 +135,11 @@ LIBLUA := contrib/install/lib/liblua.a
 endif
 LIBZ := contrib/install/lib/libz.a
 
+LUA_INCLUDE_DIR := /usr/include/lua5.1
+LUA_LIB := -llua5.1
+SQLITE_INCLUDE_DIR := /usr/include
+SQLITE_LIB := -lsqlite3
+
 #
 # Platform Detection
 #
@@ -433,23 +438,19 @@ endif
 endif
 
 ifndef BUILD_LUA
-  ifneq (,$(wildcard /usr/include/lua5.1))
-    INCLUDES_L += -I/usr/include/lua5.1
-    LIBS += -llua5.1
+  ifneq (,$(wildcard $(LUA_INCLUDE_DIR)/lua.h))
+    INCLUDES_L += -I$(LUA_SYSTEM_DIR)
+    LIBS += $(LUA_LIB)
   else
-    ifneq (,$(wildcard /usr/include/lua.h))
-      LIBS += -llua
-    else
-      BUILD_LUA = yes
-    endif
+    BUILD_LUA = yes
   endif
 endif
 
 ifndef BUILD_SQLITE
-  ifneq ($(shell grep -q sqlite3_prepare_v2 /usr/include/sqlite3.h 2>/dev/null && echo yes),yes)
-    BUILD_SQLITE = yes
+  ifeq ($(shell grep -q sqlite3_prepare_v2 $(SQLITE_INCLUDE_DIR)/sqlite3.h 2>/dev/null && echo yes),yes)
+    LIBS += $(SQLITE_LIB)
   else
-    LIBS += -lsqlite3
+    BUILD_SQLITE = yes
   endif
 endif
 
