Check /usr/include for lua if the Debian-standard location doesn't have it. (doy) (cherry picked from commit 968cc6db3fdc66c94dd69ef826de2c3f81512255)
Signed-off-by: Darshan Shaligram <dshaligram@users.sourceforge.net>

--- a/crawl-ref/source/makefile
+++ b/crawl-ref/source/makefile
@@ -442,7 +442,11 @@ ifndef BUILD_LUA
     INCLUDES_L += -I$(LUA_INCLUDE_DIR)
     LIBS += $(LUA_LIB)
   else
-    BUILD_LUA = yes
+    ifneq (,$(wildcard /usr/include/lua.h))
+      LIBS += -llua
+    else
+      BUILD_LUA = yes
+    endif
   endif
 endif
 
